Added dishes localized string

--- a/EndoNutrition/Resources/Localized/Meals.xcstrings
+++ b/EndoNutrition/Resources/Localized/Meals.xcstrings
@@ -1,6 +1,23 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "dishes.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Dishes"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "needs_review",
+            "value" : "Piatti"
+          }
+        }
+      }
+    },
     "mealshome.title" : {
       "extractionState" : "manual",
       "localizations" : {
