--- a/EndoNutrition/Resources/Localized/Meals.xcstrings
+++ b/EndoNutrition/Resources/Localized/Meals.xcstrings
@@ -69,6 +69,23 @@
         }
       }
     },
+    "dishes.see.all" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "See all"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Vedi tutti"
+          }
+        }
+      }
+    },
     "dishes.title" : {
       "extractionState" : "manual",
       "localizations" : {
